# Pytemplate

./: .atom-build.yml  .deepsource.toml  .travis.yml  .unibeautifyrc.json  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  configure.py  cookicutter.json  cookiecutter.json  dev-requirements.txt  pyproject.toml  pytest-requirements.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: meta-request.md
.github/workflows/: Format.yml  black.yml  format.yml  linter.yml  python-check.yml
src/package_name/: __init__.py  __main__.py  __main__.pyi  sub_module.py
src/{{ cookiecutter.package_name}}/: __main__.py
tests/: __init__.py  test_main.py
{{ cookiecutter.repo_name }}/: CONTRIBUTING.md
{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: bug_report.md
{{ cookiecutter.repo_name }}/.github/workflows/: python-check.yml
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name}}/: __init__.py  sub_module.py
