[pycodestyle]
max_line_length = 90
ignore = "E4"
[tool.autopep8]
max_line_length = 90
ignore = "E4"
[tool.isort]
profile = "black"
line_length = 90

[tool.poetry]
name = "Pytemplate"
version = "0.1.0"
description = "Short description shown on Pypi."
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",  # Optional support
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    # "License :: OSI Approved :: MIT License",
    # "Intended Audience :: Developers",
    # "Intended Audience :: End Users/Desktop",
    # "Intended Audience :: System Administrators",
    # "Topic :: Utilities",
]
readme = "README.md"
repository = "https://github.com/{USERNAME}/{PACKAGE}"
homepage = "https://github.com/{USERNAME}/{PACKAGE}"
documentation = "https://{PACKAGE}.readthedocs.io"
packages = [ {include = "package_name", from = "src"} ]
include = ["LICENSE"]
exclude = ["tests/**"]
[tool.poetry.scripts]
keywords = [""]
package_name = "package_name.__main__:_main"
[tool.poetry.extras]

[tool.poetry.urls]

"Source Code" = "https://github.com/{USERNAME}/{PACKAGE}"
"Bug Tracker" = "https://github.com/{USERNAME}/{PACKAGE}/issues"
"Say Thanks! "= "https://saythanks.io/to/{__contact__}"
"Travis CI" = "https://travis-ci.com/github/{USERNAME}/{PACKAGE}"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wheel = "^0.35.1"
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
setuptools = "^50.3.2"
mypy = "^0.790"
pylint = "^2.6.0"
isort = "^5.6.4"
# Pytest dependencies
pytest-cov = "^2.10.1"
pytest-instafail = "^0.4.2"
pytest-random = "^0.02"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
